# rqtl2-geno-kinship-rust

./: Cargo.toml  README.md  build.rs
benches/: bench_buf_filler.rs
src/: bimbam.rs  bin.rs  gen_bimbam_files.py  lib.rs  rqtl2.rs
src/util/: cublas_dsyrk.cu  error.rs  kinship.rs  mod.rs  tokenizers.rs
tests/: test_bimbam.rs  test_rqtl2.rs  tests.rs
tests/common/: mod.rs
