[package]
name = "kinship_matrix"
version = "0.1.0"
authors = ["nickroz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rqtl2"
path = "src/lib.rs"

[dependencies]
num_cpus = "1.13.0"
bstr = "0.2.14"
criterion = "0.3"

[[bin]]
name = "test_lib"
path = "src/bin.rs"

[[bench]]
name = "bench_buf_filler"
harness = false


